# sc

./: .gitignore  Cargo.toml  README.md  TODO.md  diesel.toml
migrations/2024-12-23-072302_init/: down.sql  up.sql
migrations/2025-02-10-041250_seed/: down.sql  up.sql
rsrc/: database.sql  markdown-template.md  notes.md
src/: colors.rs  environment.rs  greeting.rs  main.rs  web.rs
src/cli/: git.rs  mod.rs
src/commands/: completions.rs  env.rs  greeting.rs  mod.rs  quotes.rs  web.rs
src/commands/environment/: mod.rs
src/commands/git/: core.rs  mod.rs
src/commands/quotes/: core.rs  mod.rs
src/commands/tasks/: core.rs  mod.rs
src/commands/web/: core.rs  mod.rs
src/core/: sql.rs  web.rs
src/database/: mod.rs  model.rs  schema.rs  sqlite.rs
src/database/models/: mod.rs  quote.rs  search.rs  task.rs
src/database/sqlite/: mod.rs  quote.rs  search.rs  task.rs
src/git/: core.rs  mod.rs
