[package]
name = "cmd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["color", "derive", "suggestions"] }
clap_complete = "4.5.38"
clap_complete_nushell = "4.5.4"
derive = "1.0.0"
diesel = { version = "2.2.6", features = ["chrono", "sqlite"] }
directories = "5.0.1"
git2 = "0.19.0"
lazy_static = "1.5.0"
open = "5.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
